:sparkles: New Files
Introduce new files.

--- a/Testando variaveis CSS/testes/index.html
+++ b/Testando variaveis CSS/testes/index.html
@@ -30,7 +30,6 @@
         <div class="navbar-nav d-flex justify-content-start">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="#">Filmes</a>
-
         </div>
         <div class="collapse navbar-collapse  navbar-nav  d-flex justify-content-end" id="navbarNavAltMarkup">
           <a class="nav-link" href="#">Login</a>
@@ -60,7 +59,7 @@
         <a href="https://www.youtube.com/" target="_blank">
           <img src="./Harry-Potter-scaled.jpg" class="d-block w-100 carouselImg" alt="...">
         </a>
-        <div class="carousel-caption d-none d-md-block h-50 d-inline-block">
+        <div class="carousel-caption d-none d-md-block h-50">
           <h2 class="display-3">Assista de onde quiser!</h2>
           <p class="display-6">Oferecemos o melhor serviço de stream do país.</p>
         </div>
