--- a/projeto-base/index.html
+++ b/projeto-base/index.html
@@ -4,9 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <title>fruta e fruto</title>
   <link rel="stylesheet" type="text/css" href="src/style.css">
+
+  <title>fruta e fruto</title>
 </head>
 
 <body>
@@ -41,30 +46,18 @@
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="11" aria-label="Slide 12"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./src/img/carrossel-img2.jpg" class="d-block w-100 carouselImg" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+        <div class="carousel-caption d-none d-md-block h-50">
+          <h1 class="titleh1">Reaproveite melhor os alimentos!</h1>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./src/img/carrossel-img1.jpg" class="d-block w-100 carouselImg" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+        <div class="carousel-caption d-none d-md-block h-50">
+          <h1 class="titleh1">Economize e ganhe em saúde!</h1>
         </div>
       </div>
     </div>
@@ -77,11 +70,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <!-- <h1>Reaproveite melhor os alimentos!</h1>
-  <h1>Economize e ganhe em saúde!</h1> -->
 
-  <h2>Receitas para economizar e ganhar saúde</h2>
-  <h2>Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</h2>
+  <h2 class="titleh1 text-center">Receitas para economizar e ganhar saúde</h2>
+  <p  class="titleh1 text-center">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
 
   <img src="src/img/receita-abacate.jpg" alt="tigela com salada de abacate, vista superior">
   <h3>Tigela de abacate</h3>
